--- a/widget_test.html
+++ b/widget_test.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<div id="kaskus-hotthread" height="400px" data-type="1"></div>
-<script>(function (d, s, id){var js, fjs = d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="https://widgetstaging.kaskus.co.id/js/widget/hotthread.js";fjs.parentNode.insertBefore(js,fjs)}(document, 'script', 'kaskus-js'));</script>
+<div id="kaskus-hotthread" height="250px" data-type="1"></div>
+<script>__kk_opt={domain:"https://widgetstaging.kaskus.co.id"};(function (d, s, id){var js, fjs = d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="https://widgetstaging.kaskus.co.id/js/widget/hotthread.js";fjs.parentNode.insertBefore(js,fjs)}(document, 'script', 'kaskus-js'));</script>
 </body>
 </html>
