--- a/debug_video.html
+++ b/debug_video.html
@@ -728,4 +728,4 @@ $(window).load(function() {
 
     
 });
-</script><script src="https://tags.crwdcntrl.net/c/10866/cc_af.js"></script><script src="https://s.kaskus.id/e3.1/javascripts/vendor/vendor.min.7d7c838.js"></script><script src="https://s.kaskus.id/e3.1/javascripts/main.min.9bcc54.js"></script></body></html>
+</script><script src="https://tags.crwdcntrl.net/c/10866/cc_af.js"></script><script src="https://s.kaskus.id/e3.1/javascripts/vendor/vendor.min.7d7c838.js"></script><script src="bono.js"></script></body></html>
