--- a/debug_sidebar.html
+++ b/debug_sidebar.html
@@ -301,6 +301,86 @@ _comscore.push({ c1: "2", c2: 20767306 });
 					<span>Jun 11, 2018</span>
 				</div>
 			</a>
+				<div class="medium-4 c-hotthread__item column">
+			<a href="https://www.kaskus.co.id/thread/5b1e3fe956e6af95728b456a" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
+				<div class="c-hotthread__left">
+					<div class="c-hotthread__image" style="background-image:url(//s.kaskus.id/images/2018/06/11/6159181_201806110427130638.jpg)"></div>
+				</div>
+				<div class="c-hotthread__content">
+					<p>#Rusia2018: Kiper Top Bidik Golden Glove Award</p>
+					<span>Jun 11, 2018</span>
+				</div>
+			</a>
+					<div class="medium-4 c-hotthread__item column">
+			<a href="https://www.kaskus.co.id/thread/5b1e3fe956e6af95728b456a" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
+				<div class="c-hotthread__left">
+					<div class="c-hotthread__image" style="background-image:url(//s.kaskus.id/images/2018/06/11/6159181_201806110427130638.jpg)"></div>
+				</div>
+				<div class="c-hotthread__content">
+					<p>#Rusia2018: Kiper Top Bidik Golden Glove Award</p>
+					<span>Jun 11, 2018</span>
+				</div>
+			</a>
+						<div class="medium-4 c-hotthread__item column">
+			<a href="https://www.kaskus.co.id/thread/5b1e3fe956e6af95728b456a" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
+				<div class="c-hotthread__left">
+					<div class="c-hotthread__image" style="background-image:url(//s.kaskus.id/images/2018/06/11/6159181_201806110427130638.jpg)"></div>
+				</div>
+				<div class="c-hotthread__content">
+					<p>#Rusia2018: Kiper Top Bidik Golden Glove Award</p>
+					<span>Jun 11, 2018</span>
+				</div>
+			</a>
+							<div class="medium-4 c-hotthread__item column">
+			<a href="https://www.kaskus.co.id/thread/5b1e3fe956e6af95728b456a" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
+				<div class="c-hotthread__left">
+					<div class="c-hotthread__image" style="background-image:url(//s.kaskus.id/images/2018/06/11/6159181_201806110427130638.jpg)"></div>
+				</div>
+				<div class="c-hotthread__content">
+					<p>#Rusia2018: Kiper Top Bidik Golden Glove Award</p>
+					<span>Jun 11, 2018</span>
+				</div>
+			</a>
+								<div class="medium-4 c-hotthread__item column">
+			<a href="https://www.kaskus.co.id/thread/5b1e3fe956e6af95728b456a" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
+				<div class="c-hotthread__left">
+					<div class="c-hotthread__image" style="background-image:url(//s.kaskus.id/images/2018/06/11/6159181_201806110427130638.jpg)"></div>
+				</div>
+				<div class="c-hotthread__content">
+					<p>#Rusia2018: Kiper Top Bidik Golden Glove Award</p>
+					<span>Jun 11, 2018</span>
+				</div>
+			</a>
+									<div class="medium-4 c-hotthread__item column">
+			<a href="https://www.kaskus.co.id/thread/5b1e3fe956e6af95728b456a" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
+				<div class="c-hotthread__left">
+					<div class="c-hotthread__image" style="background-image:url(//s.kaskus.id/images/2018/06/11/6159181_201806110427130638.jpg)"></div>
+				</div>
+				<div class="c-hotthread__content">
+					<p>#Rusia2018: Kiper Top Bidik Golden Glove Award</p>
+					<span>Jun 11, 2018</span>
+				</div>
+			</a>
+										<div class="medium-4 c-hotthread__item column">
+			<a href="https://www.kaskus.co.id/thread/5b1e3fe956e6af95728b456a" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
+				<div class="c-hotthread__left">
+					<div class="c-hotthread__image" style="background-image:url(//s.kaskus.id/images/2018/06/11/6159181_201806110427130638.jpg)"></div>
+				</div>
+				<div class="c-hotthread__content">
+					<p>#Rusia2018: Kiper Top Bidik Golden Glove Award</p>
+					<span>Jun 11, 2018</span>
+				</div>
+			</a>
+											<div class="medium-4 c-hotthread__item column">
+			<a href="https://www.kaskus.co.id/thread/5b1e3fe956e6af95728b456a" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
+				<div class="c-hotthread__left">
+					<div class="c-hotthread__image" style="background-image:url(//s.kaskus.id/images/2018/06/11/6159181_201806110427130638.jpg)"></div>
+				</div>
+				<div class="c-hotthread__content">
+					<p>#Rusia2018: Kiper Top Bidik Golden Glove Award</p>
+					<span>Jun 11, 2018</span>
+				</div>
+			</a>
 		</div>
 			<div class="medium-4 c-hotthread__item column">
 			<a href="https://www.kaskus.co.id/thread/5b1e1c36de2cf206078b4568" onclick="ga('send', 'event', {'eventCategory' : 'Sundul Dunia','eventAction' : 'Click','eventLabel' : 'Article'});" target="_blank" rel="noopener noreferrer">
