--- a/widget.html
+++ b/widget.html
@@ -1,14 +1,6 @@
 <html>
   <head></head>
   <body>
-  <div>
-  <div id="kaskus-widget" height="250px" data-type="1"></div><script>__kk_opt={domain:"https://widgetstaging.kaskus.co.id"};(function (d, s, id){var js, fjs = d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="https://widgetstaging.kaskus.co.id/js/widget/widget.js";fjs.parentNode.insertBefore(js,fjs)}(document, 'script', 'kaskus-js'));</script>
-  </div>
-  <div>
-  <div id="kaskus-widget" height="250px" data-userid="3" data-type="1" data-list="1"></div><script>__kk_opt={domain:"https://widgetstaging.kaskus.co.id"};(function (d, s, id){var js, fjs = d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="https://widgetstaging.kaskus.co.id/js/widget/widget.js";fjs.parentNode.insertBefore(js,fjs)}(document, 'script', 'kaskus-js'));</script>
-  </div>
-  <div>
-  <div id="kaskus-widget" height="250px" data-userid="3" data-type="1" data-list="2"></div><script>__kk_opt={domain:"https://widgetstaging.kaskus.co.id"};(function (d, s, id){var js, fjs = d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="https://widgetstaging.kaskus.co.id/js/widget/widget.js";fjs.parentNode.insertBefore(js,fjs)}(document, 'script', 'kaskus-js'));</script>
-  </div>
+    <iframe src="https://live.kaskus.co.id" width="100%"></iframe>
   </body>
 </html>
