--- a/test.html
+++ b/test.html
@@ -1,1 +1,2 @@
-<iframe src="https://live.kaskus.co.id" frameborder="0" width="100%">
+<iframe src="https://live.kaskus.co.id" frameborder="0" width="100%"></iframe>
+<iframe src="https://widget.kaskus.co.id" frameborder="0" width="100%"></iframe>
