--- a/gdpv.html
+++ b/gdpv.html
@@ -12,7 +12,7 @@
 	  <div id="gdpvcareer"></div>
     <script>
       const __domain = {
-        url: "http://jobs.dev365.gdpventure.com"
+        url: "https://jobs.dev365.gdpventure.com"
       };
 
       (function(d, s, id) {
@@ -20,7 +20,7 @@
         if (d.getElementById(id)) return;
         js = d.createElement(s);
         js.id = id;
-        js.src = "http://jobs.dev365.gdpventure.com/js/iframe_handler.js";
+        js.src = "https://jobs.dev365.gdpventure.com/js/iframe_handler.js";
         fjs.parentNode.insertBefore(js, fjs)
       }(document, 'script', 'jobs-js'));
     </script>
