--- a/gdpv.html
+++ b/gdpv.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
 	</head>
 
-	<body>
+	<body style="margin: 0px;">
     <h1>HEADER</h1>
 	  <div id="gdpvcareer"></div>
     <script>
