--- a/gdpv3.html
+++ b/gdpv3.html
@@ -27,7 +27,7 @@
         if (d.getElementById(id)) return;
         js = d.createElement(s);
         js.id = id;
-        js.src = "https://jobs.dev365.gdpventure.com/js/iframe_handler.js";
+        js.src = "https://jobs.dev365.gdpventure.com/js/iframe_handler.min.js";
         fjs.parentNode.insertBefore(js, fjs)
       }(document, 'script', 'jobs-js'));
     </script>
