--- a/gdpv.html
+++ b/gdpv.html
@@ -8,7 +8,12 @@
 	</head>
 
 	<body style="margin: 0px;">
-    <h1>HEADER</h1>
+    	<h1 style="position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: 0;
+	background-color: white;">HEADER</h1>
 	  <div id="gdpvcareer"></div>
     <script>
       const __domain = {
