--- a/gdpv.html
+++ b/gdpv.html
@@ -14,7 +14,7 @@
 	right: 0;
 	margin: 0;
 	background-color: white;">HEADER</h1>
-	  <div id="gdpvcareer"></div>
+	  <div id="gdpvcareer" style="margin-top: 37px"></div>
     <script>
       const __domain = {
         url: "https://jobs.dev365.gdpventure.com"
